# savkit-learn

./: .gitignore  LICENSE  README.md  THEORY.md  pyproject.toml
benchmarks/: test.py
notebooks/: alghorithms.ipynb  algorithms.ipynb  linear_regression.ipynb  metrics.ipynb
savkit/: __init__.py  base.py
savkit/linear_model/: linear.py  logistic.py
savkit/metrics/: __init__.py  regression.py
savkit/tree/: decision_tree.py
svlearn/: __init__.py  base.py
svlearn/ensemble/: __init__.py  random_forest.py
svlearn/linear_model/: __init__.py  linear.py  logistic.py
svlearn/metrics/: regression.py
svlearn/neighbors/: knn.py
svlearn/tree/: \  __init__.py  decision_tree.py
