[project] 
name = "savkit-learn" 
dependencies = [ 
	"numpy", 
	"jaxtyping", 
	"scikit-learn", 
	"matplotlib", 
	"seaborn" 
]

[dependency-groups]
dev = [
	"pytest",
	"ruff", 
	"pyright" 
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["savkit"]

venvPath = "."
venv = "venv"

typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["savkit"]

venvPath = "."
venv = "venv"

typeCheckingMode = "basic"