[project] 
name = "savkit-learn" 
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"numpy",
	"jaxtyping",
	"scikit-learn",
	"matplotlib",
	"seaborn",
	"beartype>=0.22.9",
	"jupyter>=1.1.1",
]

[dependency-groups]
dev = [
	"pytest",
	"ruff", 
	"pyright" 
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["svlearn"]

venvPath = "."
venv = "venv"

typeCheckingMode = "basic"

[tool.setuptools.packages.find]
include = ["svlearn", "svlearn.*"]
